--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -10,6 +10,7 @@
         <ResourceDictionary Source="pack://application:,,,/Styles/ContentSwitcher.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/ToolbarBorder.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/HoverableBorder.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Styles/ToolbarToggleMenu.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <Style BasedOn="{StaticResource Styles.CountdownElement}" TargetType="{x:Type controls:CountdownElement}"/>
     <Style BasedOn="{StaticResource Styles.CountdownControl}" TargetType="{x:Type controls:CountdownControl}"/>
