Made pretty big improvements to calendar performance.

--- a/Features/Calendar/RaceView.xaml
+++ b/Features/Calendar/RaceView.xaml
@@ -16,6 +16,8 @@
           d:DataContext="{d:DesignInstance local:RaceViewModel}"
           Style="{StaticResource {x:Type Expander}}"
           IsExpanded="{Binding IsNext, Mode=OneTime}"
+          Expanded="{s:Action OnExpanded}"
+          Collapsed="{s:Action OnCollapsed}"
           Margin="10 0 10 0">
     <i:Interaction.Behaviors>
         <behaviours:BubbleScrollEvent />
