--- a/Features/Calendar/RaceView.xaml
+++ b/Features/Calendar/RaceView.xaml
@@ -15,9 +15,8 @@
           mc:Ignorable="d"
           d:DataContext="{d:DesignInstance local:RaceViewModel}"
           Style="{StaticResource {x:Type Expander}}"
-          IsExpanded="{Binding IsNext, Mode=OneTime}"
+          IsExpanded="{Binding IsNext, Mode=OneWay}"
           Expanded="{s:Action OnExpanded}"
-          Collapsed="{s:Action OnCollapsed}"
           Margin="10 0 10 0">
     <i:Interaction.Behaviors>
         <behaviours:BubbleScrollEvent />
